[gd_scene load_steps=6 format=3 uid="uid://clldflk42myex"]

[ext_resource type="Script" path="res://pets/pet.gd" id="1_a0r6y"]
[ext_resource type="Script" path="res://pets/pet_type/he_ro_buh_type.gd" id="3_ctpwi"]
[ext_resource type="Script" path="res://script_templates/timer/solo_timer.gd" id="4_qd7at"]
[ext_resource type="SpriteFrames" uid="uid://bifauo7clkw3i" path="res://assets/animation_frames/pets/stage3/he_ro_buh_frames.tres" id="5_nmdxs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jamv8"]
size = Vector2(16, 9)

[node name="BuhBuhPet" type="Node2D" node_paths=PackedStringArray("sprite", "leftCollider", "rightCollider") groups=["Pet"]]
script = ExtResource("1_a0r6y")
sprite = NodePath("Sprite")
leftCollider = NodePath("LeftObjectColl")
rightCollider = NodePath("RightObjectColl")

[node name="Type" type="Node" parent="." node_paths=PackedStringArray("moveTimer", "neglectTimer")]
script = ExtResource("3_ctpwi")
moveTimer = NodePath("MoveTimer")
neglectTimer = NodePath("NeglectTimer")
petName = "HeRoBuh"

[node name="MoveTimer" type="Timer" parent="Type"]
script = ExtResource("4_qd7at")

[node name="NeglectTimer" type="Timer" parent="Type"]
script = ExtResource("4_qd7at")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = ExtResource("5_nmdxs")
animation = &"Idle"
offset = Vector2(0, -12)

[node name="LeftObjectColl" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftObjectColl"]
position = Vector2(-32, -4.5)
shape = SubResource("RectangleShape2D_jamv8")

[node name="RightObjectColl" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightObjectColl"]
position = Vector2(32, -4)
shape = SubResource("RectangleShape2D_jamv8")

[connection signal="timeout" from="Type/NeglectTimer" to="." method="neglectTimeout"]
[connection signal="area_entered" from="LeftObjectColl" to="." method="_objectAreaCollisionEnter"]
[connection signal="area_exited" from="LeftObjectColl" to="." method="_objectAreaCollisionExit"]
[connection signal="body_entered" from="LeftObjectColl" to="." method="_objectBodyCollisionEnter"]
[connection signal="body_exited" from="LeftObjectColl" to="." method="_objectBodyCollisionExit"]
[connection signal="area_entered" from="RightObjectColl" to="." method="_on_right_object_coll_area_entered"]
[connection signal="area_exited" from="RightObjectColl" to="." method="_on_right_object_coll_area_exited"]
